More alignment fixes.
git-svn-id: https://zero-install.svn.sourceforge.net/svnroot/zero-install/trunk/htdocs@2308 9f8c893c-44ee-0310-b757-c8ca8341c71e

--- a/style.css
+++ b/style.css
@@ -30,10 +30,11 @@ div.main a {
 
 td.header {
 	text-align: left;
+	padding-left: 2em;
 }
 
 p.author {
-	margin: .1em 0 1em 0;
+	margin: .1em 0 1.5em 0;
 	font-size: small;
 }
 
